--- a/style.css
+++ b/style.css
@@ -1,7 +1,67 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 h1{
     font-size:50px;
+    /* padding-left:8%; */
+    
+}
+h3{
+    /* padding-left:8%; */
+    font-size:120%;
+    font-weight: 700;
+}
+.name{
+    color: orange;
+}
+section{
+    display:flex;
+    width:80%
+}
+.half-width{
+    padding-left:10%;
+}
+.half-width img{
+    width:100%;
+}
+.button{
+    text-decoration:none;
+    background-image: linear-gradient(salmon,tomato);
+    padding: 10px 40px;
+    border-radius:5px;
+    color:white;
+    font-weight: 700;
+    font-family:Arial, Helvetica, sans-serif;
+
+}
+.second-part{
+    padding-left:10%;
+    
+}
+.second-part img{
+    width:100%;
+}
+.download{
+    text-decoration: none;
+    background-image: linear-gradient(salmon, rgb(255, 126, 103));
+    border-radius:5px;
+    padding: 10px 40px;
+    color:white;
+    font-weight: 700;
+    
+
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+
+.dream-area{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position:right;
+    
+
 }
