--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@ h3{
 .name{
     color: orange;
 }
-section{
+.flexible-container{
     display:flex;
     width:80%
+    margin-bottom:150px;
 }
 .half-width{
     padding-left:10%;
@@ -64,4 +65,40 @@ section{
     background-position:right;
     
 
+}
+#exp{
+    padding-left:6%
+}
+.exp-area{
+    display:flex;
+    width:80%;
+    padding:10px 40px;
+    background-image:url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    
+}
+.exp-item{
+    width:40%;
+    margin-left:5%;
+    margin-right:5%;
+    padding: 10px 40px;
+    box-shadow:0px 0px 20px gray;
+    border-radius: 10px;
+    
+}
+#full{
+    border-left: 10px solid;
+     border-image:linear-gradient(salmon,tomato);
+     border-image-slice: 1;
+     
+}
+#baby{
+    border-left: 10px solid blueviolet;
+    border-image:linear-gradient(blue , cyan);
+    border-image-slice: 1;
+}
+footer p{
+    font-size: 12px;
+    font-weight: 10px;
+    text-align:center;
 }
